// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`given frontmatter mode=[default] (merge) should merge the frontmatter and return the markup 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://config-foo-default.com https://frontmatter-foo-default.com; img-src https://config-foo-img.com https://frontmatter-foo-img.com"
    >
    <title>
      Fake Title
    </title>
  </head>
  <body>
  </body>
</html>
`;

exports[`given frontmatter mode=merge should merge the frontmatter and return the markup 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://config-foo-default.com https://frontmatter-foo-default.com; img-src https://config-foo-img.com https://frontmatter-foo-img.com"
    >
    <title>
      Fake Title
    </title>
  </head>
  <body>
  </body>
</html>
`;

exports[`given frontmatter mode=replace should replace the config with the frontmatter and return the markup 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://frontmatter-foo-default.com; img-src https://frontmatter-foo-img.com"
    >
    <title>
      Fake Title
    </title>
  </head>
  <body>
  </body>
</html>
`;

exports[`given valid args should apply only the corresponding polices for that path (foo/index.html 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src https://config-foo-default.com https://frontmatter-foo-default.com"
    >
    <title>
      Fake Title
    </title>
  </head>
  <body>
  </body>
</html>
`;

exports[`given valid args should return the markup with CSP applied 1`] = `
<!DOCTYPE html>
<html lang="en">
  <head>
    <meta http-equiv="Content-Security-Policy"
          content="default-src 'self' https://foo.com; img-src https://bar.com"
    >
    <title>
      Fake Title
    </title>
  </head>
  <body>
  </body>
</html>
`;
